Reduced code-size + STVP programming option added
Reduced code-size by removing all bit-fields and unions. This saved over
500 bytes of Flash memory.

--- a/WR-032-v2-2016-4-7.md
+++ b/WR-032-v2-2016-4-7.md
@@ -49,4 +49,7 @@ Then, proceed with the following:
 
 Now you have the same functionality again as with the standard WR-032 hardware revision.
 
+![wr032-v2-changes](img/wr032_v2_changes.jpg)<br>
+*This is how it looks when the changes have been made*
+
 
